# fastapi-telegram-bot

./: LICENSE  README.md  docker-compose.yml  ngnix.conf
.github/workflows/: lint_and_types.yml  publish.yml
api/: .env.exampe  Dockerfile  main.py  ngnix.conf  pyproject.toml
api/app/: config.py  main.py
api/app/db/: engine.py
api/app/db/crud/: messages.py
api/app/db/models/: message.py  user.py
api/app/routers/: __init__.py
api/app/routers/api_v1/: __init__.py  messages.py
bot/: .env.exampe  Dockerfile  pyproject.toml
bot/app/: __main__.py  config.py  main.py
bot/app/db/: engine.py
bot/app/db/models/: message.py  user.py
bot/app/db/redis/: engine.py  models.py
bot/app/handlers/: __init__.py  base_commands.py  messages_commands.py  user_commands.py
bot/app/handlers/messages/: __init__.py  crud_handlers.py
bot/app/loggers/: logger.py
