[tool.poetry]
name = "web"
version = "0.1.0"
description = "Web project"
authors = ["Malins062 <6328673@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
uvicorn = {extras = ["standart"], version = "^0.30.5"}
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
