[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Alexei Malinovskii <6328673@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
redis = "^5.0.8"
pydantic-settings = "^2.3.4"
aiosmtplib = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.6"

[tool.ruff]
show-fixes = true
line-length = 120
lint.select = ["F", "E", "W", "C90", "I", "N", "S", "B", "A", "ISC", "T20", "Q", "PTH"]
lint.ignore = ["A003"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
